Fix Broken layout when scaling screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -134,8 +134,14 @@ p {
 }
 
 @media screen and (max-width: 800px) {
-  :root {
-    font-size: 2.5vw;
+  h3 {
+    font-size: 2em;
+  }
+  h4 {
+    font-size: 1.5em;
+  }
+  p {
+    font-size: 1.2em;
   }
 }
 
